--- a/dynamics/TODO.txt
+++ b/dynamics/TODO.txt
@@ -1,7 +1,6 @@
 The list of things to do
 ------------------------
 
-* Implement 2D (phase space 4D) solver as a separate utility solve4D.py
+* Implement 4D and 6D visualisation (solplay4D and solplay6D) tools
 
-* Try the native pyfftw allocation and plan preparation and see if it makes things faster
-
+* Try the native pyfftw memory allocation and planning to see if it makes things faster
